--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "game-of-life",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.5"
-  }
+	"name": "game-of-life",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"autoprefixer": "^10.4.0",
+		"postcss": "^8.4.5",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"sass": "^1.51.0"
+	},
+	"devDependencies": {
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
+		"@vitejs/plugin-react": "^1.0.0",
+		"tailwindcss": "^3.0.7",
+		"typescript": "^4.3.2",
+		"vite": "^2.5.4"
+	}
 }
